--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </tfoot>
         </table>
       </div>
-      <button class="btn btn-success iniciar-checkout" disabled>Iniciar Checkout</button>
+      <button class="btn btn-success iniciar-checkout" disabled>Canjear</button>
     </div>
   </section>
 
