--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#catalogo">300 Puntos disponibles</a></li>
-          <li class="nav-item"><a class="nav-link" href="#catalogo">Catálogo</a></li>
+          <li class="nav-item"><a class="nav-link" href="#catalogo">Productos</a></li>
           <li class="nav-item"><a class="nav-link" href="#carrito">Carrito</a></li>
         </ul>
       </div>
@@ -49,7 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Catalogo Section -->
   <section id="catalogo" class="py-5">
     <div class="container">
-      <h2 class="mb-4">Catálogo de Productos</h2>
+      <h2 class="mb-4">Productos disponibles</h2>
       <div class="row g-4">
         <!-- Producto 1 -->
         <div class="col-md-4">
