--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <header class="bg-light py-5 text-center">
     <div class="container">
       <h1 class="display-5">Bienvenido</h1>
-      <p class="lead">Tienes 300 puntos disponibles,¡canjealos! 🛒✨</p>
+      <p class="lead">Tienes 300 puntos disponibles¡canjealos! 🛒✨</p>
     </div>
   </header>
 
